diesel_compile_tests/tests/fail/alias_and_group_by.stderr
error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
  --> tests/fail/alias_and_group_by.rs:34:10
   |
LL |         .select(user_alias.field(users::id))
   |          ^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
   |
note: expected this to be `diesel::expression::is_contained_in_group_by::Yes`
  --> tests/fail/alias_and_group_by.rs:6:1
   |
 LL | / table! {
 LL | |     users {
 LL | |         id -> Integer,
 LL | |         name -> VarChar,
LL | |     }
LL | | }
   | |_^
note: required for `columns::id` to implement `ValidGrouping<columns::name>`
  --> tests/fail/alias_and_group_by.rs:8:9
   |
 LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 1 redundant requirement hidden
   = note: required for `AliasedField<user1, columns::id>` to implement `ValidGrouping<AliasedField<user1, columns::name>>`
   = note: required for `SelectStatement<FromClause<Alias<...>>, ..., ..., ..., ..., ..., ...>` to implement `SelectDsl<AliasedField<user1, columns::id>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
